Fix light/dark mode switching

--- a/src/index.css
+++ b/src/index.css
@@ -40,13 +40,6 @@
 
   --gradient-start: #8b5cf6; /* violet-600 */
   --gradient-end: #4f46e5; /* indigo-600 */
-
-  --gradient-bg: linear-gradient(
-    to bottom right,
-    var(--bg-primary),
-    var(--bg-secondary),
-    var(--bg-tertiary)
-  );
 }
 
 @media (prefers-color-scheme: dark) {
@@ -73,13 +66,6 @@
 
     --gradient-start: #a78bfa; /* violet-400 */
     --gradient-end: #6366f1; /* indigo-500 */
-
-    --gradient-bg: linear-gradient(
-      to bottom right,
-      var(--bg-primary),
-      var(--bg-secondary),
-      var(--bg-tertiary)
-    );
   }
 }
 
@@ -106,13 +92,6 @@
 
   --gradient-start: #a78bfa; /* violet-400 */
   --gradient-end: #6366f1; /* indigo-500 */
-
-  --gradient-bg: linear-gradient(
-    to bottom right,
-    var(--bg-primary),
-    var(--bg-secondary),
-    var(--bg-tertiary)
-  );
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -125,6 +104,21 @@ html {
   font-family: "InterVariable", sans-serif;
   font-feature-settings: "cv11" 1;
   font-variant-alternates: stylistic(cv11);
+}
+
+body {
+  background: linear-gradient(
+    to bottom right,
+    var(--bg-primary),
+    var(--bg-secondary),
+    var(--bg-tertiary)
+  );
+}
+
+.dark body {
+  --bg-primary: #1f2937;
+  --bg-secondary: #111827;
+  --bg-tertiary: #030712;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
